--- a/Content/CustomizedProduct/_US_25/_US_25.html
+++ b/Content/CustomizedProduct/_US_25/_US_25.html
@@ -81,25 +81,16 @@ h2{text-align: center; background-color: aliceblue; color: rgba(15, 191, 245, 0.
 <th>Product Description</th>
 </tr>
 </thead>
-<tbody class="table-info table-group-divider"><tr><td><a href="U25010A-VC2V/BOM-VC2V00-Test.html" class="btn btn-success">U25010A-VC2V<br>VC2V00-Test</a></td>
-            <td>Test1</td>
-            <td>2025-05-30</td>
-            <td class="Released-column">Released</td>
-            <td>VC2V X 1</td>
-            <td class="thd-ProjectName">Test VC2V</td>
-            <td>Justin</td>
-            <td><a href="U25010A-VC2V/VC2V00-Test.EASM" target="_parent"><img src="U25010A-VC2V/VC2V00-Test.jpg" height="100" title="Click to download VC2V00-Test.EASM" alt="Click to download VC2V00-Test.EASM"></a></td>	
-            <td><a href="U25010A-VC2V/VC2V00-Test.pdf" target="_parent"><img src="U25010A-VC2V/VC2V00-Test-drw.jpg" height="100" title="Click to download VC2V00-Test.pdf" alt="Click to download VC2V00-Test.pdf"></a></td>
-            <td><span style='color:black;'>VC2V Hood Size: 96X90X15X6<br>Crate Size: L100 W102 H27<br>2 Collars with ABD 6 with Access Panel : L10 W8 H4<br>with HCL Lights Qty=3<br>Marvel Box On Hood Top, There is ThermStat<br>Ansul On Left, Drops Qty=3</span></td>
-            </tr><tr><td><a href="U25010A-VC2V/BOM-VC2V00.html" class="btn btn-success">U25010A-VC2V<br>VC2V00</a></td>
+<tbody class="table-info table-group-divider">
+  <tr><td><a href="U25010A-VC2V/BOM-VCS-I-Test.html" class="btn btn-success">U25010A-VC2V<br>VCS-I-Test</a></td>
             <td></td>
             <td>2025-05-30</td>
             <td class="Released-column">Released</td>
             <td>carbon X 1</td>
             <td class="thd-ProjectName"></td>
             <td>Chase</td>
-            <td><a href="U25010A-VC2V/VC2V00.EASM" target="_parent"><img src="U25010A-VC2V/VC2V00.jpg" height="100" title="Click to download VC2V00.EASM" alt="Click to download VC2V00.EASM"></a></td>	
-            <td><a href="U25010A-VC2V/VC2V00.pdf" target="_parent"><img src="U25010A-VC2V/VC2V00-drw.jpg" height="100" title="Click to download VC2V00.pdf" alt="Click to download VC2V00.pdf"></a></td>
+            <td><a href="U25010A-VC2V/VCS-I-Test.EASM" target="_parent"><img src="U25010A-VC2V/VCS-I-Test.jpg" height="100" title="Click to download VCS-I-Test.EASM" alt="Click to download VCS-I-Test.EASM"></a></td>	
+            <td><a href="U25010A-VC2V/VCS-I-Test.pdf" target="_parent"><img src="U25010A-VC2V/VCS-I-Test-drw.jpg" height="100" title="Click to download VCS-I-Test.pdf" alt="Click to download VCS-I-Test.pdf"></a></td>
             <td><span style='color:black;'>VC2V Hood Size: 71X90X15X4<br>Crate Size: L75 W102 H27<br>1 Collar : L10 W8 H4<br>with HCL Lights Qty=2<br>No Marvel, No ThermStat<br>Ansul On Right, Drops Qty=1</span><br><span style='color:red; font-weight:bold;'>Use 18GA SS 430</span></td>
             </tr></tbody>
 </table>
