--- a/Content/StockPartLibrary/StockPartLibrary.html
+++ b/Content/StockPartLibrary/StockPartLibrary.html
@@ -10,7 +10,10 @@
    <link rel="stylesheet" href="../../wwwroot/lib/bootstrap/dist/css/bootstrap.min.css">
   
    <link rel="stylesheet" href="../../wwwroot/css/personal.css">
-
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
   
 </head>
 <body>
@@ -67,11 +70,6 @@
     </table>
     
 </div>
-   <script src="../../wwwroot/lib/jquery/dist/jquery.min.js"></script>
-   <script src="../../wwwroot/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="../../wwwroot/lib/datatables/js/dataTables.min.js"></script>
-   <script src="../../../wwwroot/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
-   <!-- Add your custom script -->
 
   <script src="../../wwwroot/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
 
