--- a/Content/CustomizedProduct/_US_25/U25010A-VC2V/BOM-VCS-I-Test.html
+++ b/Content/CustomizedProduct/_US_25/U25010A-VC2V/BOM-VCS-I-Test.html
@@ -17,12 +17,12 @@ h2{text-align: center; background-color: aliceblue; color: rgba(15, 191, 245, 0.
 
  <link  rel="stylesheet" href="../../../../wwwroot/lib/bootstrap/dist/css/bootstrap.min.css">
  <link  rel="stylesheet" href="../../../../wwwroot/css/personal.css">
-<script src="/wwwroot/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/wwwroot/lib/jquery/dist/jquery.min.js"></script>
-<script src="/wwwroot/lib/datatables/js/datatables.min.js"></script>
-<script src="/wwwroot/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
-<script src="/wwwroot/js/sorttables.js"></script>
-<script src="/wwwroot/js/MetaDataProjectUpdate.js"></script>
+<script src="../../../../wwwroot/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../../../../wwwroot/lib/jquery/dist/jquery.min.js"></script>
+<script src="../../../../wwwroot/lib/datatables/js/datatables.min.js"></script>
+<script src="../../../../wwwroot/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
+<script src="../../../../wwwroot/js/sorttables.js"></script>
+<script src="../../../../wwwroot/js/MetaDataProjectUpdate.js"></script>
 <!-- Project Metadata -->
 <meta name="Engineer" content="Justin">
 <meta name="SerialNO" content="Test1">
