--- a/Content/CustomizedProduct/_US_25/U25010A-VC2V/BOM-VCS-I-Test.html
+++ b/Content/CustomizedProduct/_US_25/U25010A-VC2V/BOM-VCS-I-Test.html
@@ -14,6 +14,12 @@ h2{text-align: center; background-color: aliceblue; color: rgba(15, 191, 245, 0.
 </style>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" >
  <link href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" rel="stylesheet" >
+ 
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+
 
  <link  rel="stylesheet" href="../../../../wwwroot/lib/bootstrap/dist/css/bootstrap.min.css">
  <link  rel="stylesheet" href="../../../../wwwroot/css/personal.css">
